--- a/mobile/src/main/res/layout/content_l_prompt.xml
+++ b/mobile/src/main/res/layout/content_l_prompt.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fl_base"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:ignore="RtlHardcoded">
 
     <TextView
         android:id="@+id/tv_time"
@@ -12,15 +13,13 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="1月1日 星期一 23:59:59"
-        android:textColor="?l_text1"
         app:layout_textSizePercent="50%h" />
 
     <com.zhy.android.percent.support.PercentLinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="right"
-        android:orientation="horizontal"
-        tools:ignore="RtlHardcoded">
+        android:orientation="horizontal">
 
         <com.zhy.android.percent.support.PercentRelativeLayout
             android:id="@+id/rl_home"
@@ -29,10 +28,10 @@
             android:layout_weight="7">
 
             <ImageView
+                android:id="@+id/iv_home"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_centerInParent="true"
-                android:src="?home"
                 app:layout_heightPercent="50%h" />
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
