--- a/mobile/src/main/res/layout/content_l_weather.xml
+++ b/mobile/src/main/res/layout/content_l_weather.xml
@@ -2,9 +2,9 @@
 <com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rl_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?l_item3"
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <com.wow.carlauncher.common.view.CustomRoundAngleImageView
@@ -36,7 +36,6 @@
             android:includeFontPadding="false"
             android:maxLines="1"
             android:text="晴"
-            android:textColor="?l_text3"
             app:layout_heightPercent="8%h"
             app:layout_textSizePercent="7%h" />
 
@@ -49,7 +48,6 @@
             android:includeFontPadding="false"
             android:maxLines="1"
             android:text="15°"
-            android:textColor="?l_text4"
             android:textStyle="bold"
             app:layout_heightPercent="22%h"
             app:layout_marginTopPercent="2%h"
@@ -63,15 +61,14 @@
             android:includeFontPadding="false"
             android:lines="1"
             android:text="青岛市-李沧区"
-            android:textColor="?l_text4"
             app:layout_heightPercent="9%h"
             app:layout_marginTopPercent="4%h"
             app:layout_textSizePercent="8%h" />
 
         <View
+            android:id="@+id/line1"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="?line"
             app:layout_marginTopPercent="4%h" />
 
         <com.zhy.android.percent.support.PercentLinearLayout
@@ -89,6 +86,7 @@
                 app:layout_marginTopPercent="10%h">
 
                 <TextView
+                    android:id="@+id/tv_text2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
@@ -96,7 +94,6 @@
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="空气湿度:"
-                    android:textColor="?l_text3"
                     app:layout_textSizePercent="80%h" />
 
                 <TextView
@@ -109,7 +106,6 @@
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="等待数据"
-                    android:textColor="?l_text2"
                     app:layout_textSizePercent="80%h" />
             </com.zhy.android.percent.support.PercentRelativeLayout>
 
@@ -121,6 +117,7 @@
                 app:layout_marginTopPercent="14%h">
 
                 <TextView
+                    android:id="@+id/tv_text3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
@@ -128,7 +125,6 @@
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="风向:"
-                    android:textColor="?l_text3"
                     app:layout_textSizePercent="80%h" />
 
                 <TextView
@@ -141,7 +137,6 @@
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="等待数据"
-                    android:textColor="?l_text2"
                     app:layout_textSizePercent="80%h" />
             </com.zhy.android.percent.support.PercentRelativeLayout>
 
@@ -153,6 +148,7 @@
                 app:layout_marginTopPercent="14%h">
 
                 <TextView
+                    android:id="@+id/tv_text4"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
@@ -160,7 +156,6 @@
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="风力:"
-                    android:textColor="?l_text3"
                     app:layout_textSizePercent="80%h" />
 
                 <TextView
@@ -173,7 +168,6 @@
                     android:includeFontPadding="false"
                     android:maxLines="1"
                     android:text="等待数据"
-                    android:textColor="?l_text2"
                     app:layout_textSizePercent="80%h" />
             </com.zhy.android.percent.support.PercentRelativeLayout>
 
