首页插件配置,还有个bug

--- a/mobile/src/main/res/layout/content_set_app.xml
+++ b/mobile/src/main/res/layout/content_set_app.xml
@@ -37,6 +37,24 @@
     <View style="@style/Interval" />
 
     <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_launcher_item_sort_re"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="首页插件展示顺序重置"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_launcher_item_num"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="首页插件数量"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
         android:id="@+id/sv_plugin_select"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
