部分样式修复

--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -41,10 +41,10 @@
     <color name="color_light">#ECEFF1</color>
 
     <color name="l_text1">#333e54</color>
-    <color name="l_text1_b">#5e6b81</color>
+    <color name="l_text1_b">#bbb</color>
 
     <color name="l_text2">#697185</color>
-    <color name="l_text2_b">#8390a7</color>
+    <color name="l_text2_b">#bbb</color>
 
     <color name="l_text3">#9ba1a9</color>
     <color name="l_text3_b">#848a95</color>
@@ -56,7 +56,7 @@
     <color name="line_b">#666f80</color>
 
     <color name="l_music_title">#697380</color>
-    <color name="l_music_title_b">#8390a7</color>
+    <color name="l_music_title_b">#bbb</color>
 
     <color name="l_music_zuozhe">#7b8391</color>
     <color name="l_music_zuozhe_b">#818796</color>
