--- a/mobile/src/main/res/layout/console_window.xml
+++ b/mobile/src/main/res/layout/console_window.xml
@@ -1,212 +1,217 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="#10000000"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,NestedWeights">
 
     <com.zhy.android.percent.support.PercentLinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_weight="2"
-        android:background="@drawable/n_l_postion"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_vertical|left"
-            android:paddingLeft="10dp"
-            android:text="2019年10月11日"
-            android:textColor="@android:color/white"
-            app:layout_textSizePercent="70%h" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingRight="10dp"
-            android:text="车机助手"
-            android:textColor="@android:color/white"
-            app:layout_textSizePercent="70%h" />
-    </com.zhy.android.percent.support.PercentLinearLayout>
-
-    <com.zhy.android.percent.support.PercentLinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="2dp"
-        android:layout_weight="4"
-        android:background="@drawable/n_l_postion"
-        android:orientation="horizontal">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical"
+        app:layout_heightPercent="40%h"
+        app:layout_widthPercent="60%w">
 
         <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/ll_dock1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_dock1"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/iv_main_dock_icon"
-                android:src="@mipmap/ic_add_app"
-                app:layout_heightPercent="80%h"
-                app:layout_widthPercent="80%h" />
-
-        </com.zhy.android.percent.support.PercentLinearLayout>
-
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/ll_dock2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_dock2"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/iv_main_dock_icon"
-                android:src="@mipmap/ic_add_app"
-                app:layout_heightPercent="80%h"
-                app:layout_widthPercent="80%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
-
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/ll_dock3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_dock3"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/iv_main_dock_icon"
-                android:src="@mipmap/ic_add_app"
-                app:layout_heightPercent="80%h"
-                app:layout_widthPercent="80%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
-
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/ll_dock4"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/iv_dock4"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:contentDescription="@string/iv_main_dock_icon"
-                android:src="@mipmap/ic_add_app"
-                app:layout_heightPercent="80%h"
-                app:layout_widthPercent="80%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
-    </com.zhy.android.percent.support.PercentLinearLayout>
-
-    <com.zhy.android.percent.support.PercentLinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="2dp"
-        android:layout_weight="4"
-        android:background="@drawable/n_l_postion"
-        android:orientation="horizontal">
-
-        <com.wow.carlauncher.common.view.CustomRoundAngleImageView
-            android:id="@+id/music_iv_cover"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_centerInParent="true"
-            android:contentDescription="@string/app_name"
-            android:scaleType="centerCrop"
-            android:src="@mipmap/music_dlogo"
-            app:layout_heightPercent="100%h"
-            app:layout_widthPercent="100%h"
-            app:radius="5dp" />
+            android:layout_weight="2"
+            android:background="@drawable/n_l_postion"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:lines="1"
-            android:paddingStart="20dp"
-            android:paddingEnd="20dp"
-            android:text="@string/music_name"
-            android:textColor="@android:color/white"
-            app:layout_textSizePercent="30%h" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical|left"
+                android:paddingLeft="10dp"
+                android:text="2019年10月11日"
+                android:textColor="@android:color/white"
+                app:layout_textSizePercent="70%h" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingRight="10dp"
+                android:text="车机助手"
+                android:textColor="@android:color/white"
+                app:layout_textSizePercent="70%h" />
+        </com.zhy.android.percent.support.PercentLinearLayout>
 
         <com.zhy.android.percent.support.PercentLinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:layout_widthPercent="300%h">
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="2dp"
+            android:layout_weight="4"
+            android:background="@drawable/n_l_postion"
+            android:orientation="horizontal">
 
             <com.zhy.android.percent.support.PercentLinearLayout
-                android:id="@+id/ll_prew"
+                android:id="@+id/ll_dock1"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/iv_prew"
+                    android:id="@+id/iv_dock1"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:src="@mipmap/ic_prev2"
-                    app:layout_heightPercent="50%h"
-                    app:layout_widthPercent="50%h" />
+                    android:contentDescription="@string/iv_main_dock_icon"
+                    android:src="@mipmap/ic_add_app"
+                    app:layout_heightPercent="80%h"
+                    app:layout_widthPercent="80%h" />
+
             </com.zhy.android.percent.support.PercentLinearLayout>
 
             <com.zhy.android.percent.support.PercentLinearLayout
-                android:id="@+id/ll_play"
+                android:id="@+id/ll_dock2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/iv_play"
+                    android:id="@+id/iv_dock2"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:src="@mipmap/ic_play2"
-                    app:layout_heightPercent="50%h"
-                    app:layout_widthPercent="50%h" />
+                    android:contentDescription="@string/iv_main_dock_icon"
+                    android:src="@mipmap/ic_add_app"
+                    app:layout_heightPercent="80%h"
+                    app:layout_widthPercent="80%h" />
             </com.zhy.android.percent.support.PercentLinearLayout>
 
             <com.zhy.android.percent.support.PercentLinearLayout
-                android:id="@+id/ll_next"
+                android:id="@+id/ll_dock3"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/iv_next"
+                    android:id="@+id/iv_dock3"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:src="@mipmap/ic_next2"
-                    app:layout_heightPercent="50%h"
-                    app:layout_widthPercent="50%h" />
+                    android:contentDescription="@string/iv_main_dock_icon"
+                    android:src="@mipmap/ic_add_app"
+                    app:layout_heightPercent="80%h"
+                    app:layout_widthPercent="80%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:id="@+id/ll_dock4"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/iv_dock4"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:contentDescription="@string/iv_main_dock_icon"
+                    android:src="@mipmap/ic_add_app"
+                    app:layout_heightPercent="80%h"
+                    app:layout_widthPercent="80%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+        </com.zhy.android.percent.support.PercentLinearLayout>
+
+        <com.zhy.android.percent.support.PercentLinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="4"
+            android:background="@drawable/n_l_postion"
+            android:orientation="horizontal">
+
+            <com.wow.carlauncher.common.view.CustomRoundAngleImageView
+                android:id="@+id/music_iv_cover"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_centerInParent="true"
+                android:contentDescription="@string/app_name"
+                android:scaleType="centerCrop"
+                android:src="@mipmap/music_dlogo"
+                app:layout_heightPercent="100%h"
+                app:layout_widthPercent="100%h"
+                app:radius="5dp" />
+
+            <TextView
+                android:id="@+id/music_tv_title"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="center_vertical"
+                android:lines="1"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:text="@string/music_name"
+                android:textColor="@android:color/white"
+                app:layout_textSizePercent="30%h" />
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_widthPercent="300%h">
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/music_ll_prew"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/ic_prev2"
+                        app:layout_heightPercent="50%h"
+                        app:layout_widthPercent="50%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/music_ll_play"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:id="@+id/music_iv_play"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/ic_play2"
+                        app:layout_heightPercent="50%h"
+                        app:layout_widthPercent="50%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
+
+                <com.zhy.android.percent.support.PercentLinearLayout
+                    android:id="@+id/music_ll_next"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:src="@mipmap/ic_next2"
+                        app:layout_heightPercent="50%h"
+                        app:layout_widthPercent="50%h" />
+                </com.zhy.android.percent.support.PercentLinearLayout>
             </com.zhy.android.percent.support.PercentLinearLayout>
         </com.zhy.android.percent.support.PercentLinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
-</com.zhy.android.percent.support.PercentLinearLayout>
+</com.zhy.android.percent.support.PercentRelativeLayout>
